// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`task/oapp/wire with invalid configs should fail with a malformed JS file (001) 1`] = `
[Error: Config from file '/app/packages/ua-utils-evm-hardhat-test/test/task/oapp/__data__/configs/invalid.config.001.js' is malformed. Please fix the following errors:


contracts:
- Property 'contracts.0.contract': Invalid input
- Property 'contracts.1.contract': Invalid input,
connections:
- Property 'connections': Required]
`;

exports[`task/oapp/wire with invalid configs should fail with an empty JS file 1`] = `
[Error: Config from file '/app/packages/ua-utils-evm-hardhat-test/test/task/oapp/__data__/configs/invalid.config.empty.js' is malformed. Please fix the following errors:


contracts:
- Property 'contracts': Required,
connections:
- Property 'connections': Required]
`;

exports[`task/oapp/wire with invalid configs should fail with an empty JSON file 1`] = `[Error: Unable to read config file '/app/packages/ua-utils-evm-hardhat-test/test/task/oapp/__data__/configs/invalid.config.empty.json': SyntaxError: Unexpected end of JSON input]`;
